--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,13 +11,13 @@ services:
 #       - '5432:5432'
 
 
-  tournament:
+  app:
     build: .
     command: >
       sh -c "python manage.py runserver 0.0.0.0:8000"
     env_file:
       - '.env'
     volumes:
-      - '.:/tournament'
+      - '.:/app'
     ports:
       - '8000:8000'
